--- a/work_project/templates/event/evenimente.html
+++ b/work_project/templates/event/evenimente.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'userextend/base.html' %}
 {% block content %}
         {% for eveniment in events %}
             <div>
