--- a/work_project/templates/registration/password_reset_confirm.html
+++ b/work_project/templates/registration/password_reset_confirm.html
@@ -1,15 +1,15 @@
-{% extends 'userextend/base.html' %}
+{% extends 'base.html' %}
 
-{% block title %} Login {% endblock %}
+{% block title %} Enter your password {% endblock %}
+
 
 {% block content %}
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <br><br><br>
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="text-center">Login</h3>
+                        <h3 class="text-center">Enter your password</h3>
                     </div>
                     <form method="post">
                         {% csrf_token %}
@@ -17,14 +17,12 @@
                             {{ form.as_p }}
                         </div>
                         <div class="card-footer text-center">
-                            <button type="submit" class="btn btn-outline-secondary">Login</button>
-{#                            <a href="{% url 'password_reset' %}" class="btn btn-outline-danger">Forgot your password?</a>#}
+                            <button type="submit" class="btn btn-outline-secondary">Change password</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-
 
 {% endblock %}
