--- a/work_project/templates/userextend/informatii.html
+++ b/work_project/templates/userextend/informatii.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'userextend/base.html' %}
 <h4>{{ blog_content.title }}</h4>
 
     <header class="card__header">
