--- a/work_project/templates/registration/password_reset_form.html
+++ b/work_project/templates/registration/password_reset_form.html
@@ -1,6 +1,9 @@
-{% extends 'userextend/base.html' %}
+{% extends 'base.html' %}
 
-{% block title %} Login {% endblock %}
+
+{% block title %}
+    Password Reset Form
+{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
@@ -9,7 +12,7 @@
                 <br><br><br>
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="text-center">Login</h3>
+                        <h3 class="text-center">Password Reset</h3>
                     </div>
                     <form method="post">
                         {% csrf_token %}
@@ -17,14 +20,12 @@
                             {{ form.as_p }}
                         </div>
                         <div class="card-footer text-center">
-                            <button type="submit" class="btn btn-outline-secondary">Login</button>
-{#                            <a href="{% url 'password_reset' %}" class="btn btn-outline-danger">Forgot your password?</a>#}
+                            <button type="submit" class="btn btn-outline-success">Reset my password</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-
 
 {% endblock %}
