--- a/work_project/templates/registration/update_user.html
+++ b/work_project/templates/registration/update_user.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'userextend/base.html' %}
 {% block title %}  Update - {{ user }} {% endblock %}
 
 {% block content %}
