--- a/work_project/templates/ticketing/register_ticket.html
+++ b/work_project/templates/ticketing/register_ticket.html
@@ -26,7 +26,7 @@
 {#    </div>#}
 {#{% endblock %}#}
 
-{% extends 'base.html' %}
+{% extends 'userextend/base.html' %}
 {% load static %}
 {% block content %}
     <div class="container-fluid">
