--- a/work_project/templates/user/list_of_user.html
+++ b/work_project/templates/user/list_of_user.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'userextend/base.html' %}
 {% block title %} List of user {% endblock %}
 
 {% block content %}
@@ -12,7 +12,7 @@
                         Filters
                     </h3>
                 </div>
-                <form method="get">
+                <form method="GET">
                     <div class="card-body"></div>
                     <div class="card-footer text-center">
                         <button type="submit" class="btn btn-outline-success">Filters</button>
@@ -50,12 +50,14 @@
                                 more actions
                             </button>
                             <ul class="dropdown-menu">
+
                                 <li><a class="dropdown-item"
                                        href="{% url 'update-user' user.id %}">Update</a></li>
                                 <li><a class="dropdown-item"
                                        href="{% url 'delete-user' user.id %}">Delete</a></li>
                                 <li><a class="dropdown-item"
                                        href="{% url 'details-user' user.id %}">View</a></li>
+
 
 {#                                {% if perms.student.inactive_student %}#}
 {#                                    <li>#}
