--- a/work_project/templates/event/evenimente.html
+++ b/work_project/templates/event/evenimente.html
@@ -1,56 +1,57 @@
 {% extends 'userextend/base.html' %}
 {% block content %}
-        {% for eveniment in events %}
-            <div>
-                <h2>{{ eveniment.title }}</h2>
-                <p>{{ eveniment.description }}</p>
-                <p>Status: {{ eveniment.status }}</p>
-                <p>Data creării: {{ eveniment.created_at }}</p>
-                <p>Data actualizării: {{ eveniment.updated_at }}</p>
-            </div>
-            <hr>
-        {% endfor %}
+    {% for eveniment in events %}
+        <div>
+            <h2>{{ eveniment.title }}</h2>
+            <p>{{ eveniment.description }}</p>
+            <p>Status: {{ eveniment.status }}</p>
+            <p>Data creării: {{ eveniment.created_at }}</p>
+            <p>Data actualizării: {{ eveniment.updated_at }}</p>
+        </div>
+        <hr>
+    {% endfor %}
 
-        <div class="card">
-            <div class="card-header">
-                <h2>Adaugă un nou eveniment:</h2>
-            </div>
-            <div class="card-body">
-                <form method="post" action="{% url 'adauga_eveniment' %}">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="title">Titlu:</label>
-                        <input type="text" id="title" name="title" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="description">Descriere:</label>
-                        <textarea id="description" name="description" class="form-control" required></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="status">Status:</label>
-                        <select id="status" name="status" class="form-control" required>
-                            <option value="1">To Do</option>
-                            <option value="2">In Progress</option>
-                            <option value="3">In Review</option>
-                            <option value="4">Done</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="date">Data evenimentului:</label>
-                        <input type="text" id="date" name="date" class="form-control" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Adaugă</button>
-                </form>
-            </div>
+    <div class="card">
+        <div class="card-header">
+            <h2>Adaugă un nou eveniment:</h2>
+        </div>
+        <div class="card-body">
+            <form method="post" action="{% url 'adauga_eveniment' %}">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="title">Titlu:</label>
+                    <input type="text" id="title" name="title" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="description">Descriere:</label>
+                    <textarea id="description" name="description" class="form-control" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="status">Status:</label>
+                    <select id="status" name="status" class="form-control" required>
+                        <option value="1">To Do</option>
+                        <option value="2">In Progress</option>
+                        <option value="3">In Review</option>
+                        <option value="4">Done</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="date">Data evenimentului:</label>
+                    <input type="text" id="date" name="date" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Adaugă</button>
+            </form>
         </div>
     </div>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
-        flatpickr("#date", {
-            enableTime: false,
-            dateFormat: "Y-m-d"
-        });
+        $(document).ready(function() {
+    $("#date").datepicker({
+      dateFormat: "yy-mm-dd"
+    });
+  });
     </script>
 {% endblock %}
