Alex - events & login

--- a/work_project/templates/registration/details_user.html
+++ b/work_project/templates/registration/details_user.html
@@ -17,7 +17,7 @@
                             <h5 class="card-title">{{ user }}</h5>
                             <p class="card-text">Name of user: {{ user.ticket }}</p>
                             <p class="card-text">Event name: {{ user.ticket.event }}</p>
-                            <a href="{% url 'list-of-user' %}" class="btn btn-primary">Cancel</a>
+                            <a href="{% url 'list-of-users' %}" class="btn btn-primary">Cancel</a>
                         </div>
 
                     <div class="card-footer text-body-secondary">
