--- a/work_project/templates/user/list_of_user.html
+++ b/work_project/templates/user/list_of_user.html
@@ -52,7 +52,7 @@
                             <ul class="dropdown-menu">
 
                                 <li><a class="dropdown-item"
-                                       href="{% url 'update-user' user.id %}">Update</a></li>
+                                       href="{% url 'update-user' pk=user.pk %}">Update</a></li>
                                 <li><a class="dropdown-item"
                                        href="{% url 'delete-user' user.id %}">Delete</a></li>
                                 <li><a class="dropdown-item"
