--- a/work_project/templates/userextend/base.html
+++ b/work_project/templates/userextend/base.html
@@ -50,27 +50,39 @@
                         <li class="nav-item active"><a class="nav-link " href="{% url 'login' %}">Login</a></li>
                         <li class="nav-item active"><a class="nav-link " href="{% url 'logout' %}">Logout</a></li>
                         {#                          <li class="nav-item active"><a class="nav-link active" href="{% url 'create-user' %}">User</a>#}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                               aria-expanded="false">
-                                User
-                            </a>
-                            <ul class="dropdown-menu">
+
+{#                        {% if user.is_authenticated %}#}
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    User
+                                </a>
+                                <ul class="dropdown-menu">
 
 
                                     <li><a class="dropdown-item" href="{% url 'create-user' %}">Create a new
                                         user</a></li>
 
 
+                                    <li><a class=" dropdown-item" href="{% url 'list-of-users' %}">List of user </a></li>
 
 
-                                    <li><a class=" dropdown-item" href="{% url 'list-of-user' %}">List of user </a></li>
+                                </ul>
+                            </li>
+                         <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            List of users
+                        </a>
+                        <ul class="dropdown-menu">
+                            {% for user in get_users %}
+                                <li><a class="dropdown-item" href="{% url 'details-user' user.id %}">{{ user }}</a>
+                                </li>
+                            {% endfor %}
 
-
-
-                            </ul>
-                        </li>
-
+                        </ul>
+                    </li>
+{#                        {% endif %}#}
 
 
                         <form method="get" action="{% url 'search' %}" class="d-flex" role="search">
@@ -91,6 +103,30 @@
                         {#                            </div>#}
                         {#                        </li>#}
                     </ul>
+                    {% if user.is_authenticated %}
+                        <div>
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button"
+                                        data-bs-toggle="dropdown"
+                                        aria-expanded="false">
+                                    My Profile, {{ request.user.username }}
+
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+
+                                </ul>
+                            </div>
+
+                        </div>
+                    {% else %}
+                        <div>
+                            <a href="{% url 'login' %}" class="btn btn-outline-success">Login</a>
+                            <a href="{% url 'create_user' %}" class="btn btn-outline-secondary">Sign up</a>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </nav>
