--- a/work_project/templates/event/evenimente.html
+++ b/work_project/templates/event/evenimente.html
@@ -18,6 +18,7 @@
             <div class="card-body">
                 <form method="post" action="{% url 'adauga_eveniment' %}">
                     {% csrf_token %}
+                    <input type="hidden" id ="user_id" name ="user" value ="{{ user.id }}">
                     <div class="form-group">
                         <label for="title">Titlu:</label>
                         <input type="text" id="title" name="title" class="form-control" required>
