--- a/work_project/templates/event/evenimente.html
+++ b/work_project/templates/event/evenimente.html
@@ -1,57 +1,53 @@
 {% extends 'userextend/base.html' %}
 {% block content %}
-        {% for eveniment in events %}
-            <div>
-                <h2>{{ eveniment.title }}</h2>
-                <p>{{ eveniment.description }}</p>
-                <p>Status: {{ eveniment.status }}</p>
-                <p>Data creării: {{ eveniment.created_at }}</p>
-                <p>Data actualizării: {{ eveniment.updated_at }}</p>
-            </div>
-            <hr>
-        {% endfor %}
-
-        <div class="card">
-            <div class="card-header">
-                <h2>Adaugă un nou eveniment:</h2>
-            </div>
-            <div class="card-body">
-                <form method="post" action="{% url 'adauga_eveniment' %}">
-                    {% csrf_token %}
-                    <input type="hidden" id ="user_id" name ="user" value ="{{ user.id }}">
-                    <div class="form-group">
-                        <label for="title">Titlu:</label>
-                        <input type="text" id="title" name="title" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="description">Descriere:</label>
-                        <textarea id="description" name="description" class="form-control" required></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="status">Status:</label>
-                        <select id="status" name="status" class="form-control" required>
-                            <option value="1">To Do</option>
-                            <option value="2">In Progress</option>
-                            <option value="3">In Review</option>
-                            <option value="4">Done</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="date">Data evenimentului:</label>
-                        <input type="text" id="date" name="date" class="form-control" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Adaugă</button>
-                </form>
-            </div>
+    {% for eveniment in events %}
+        <div>
+            <h2>{{ eveniment.title }}</h2>
+            <p>{{ eveniment.description }}</p>
+            <p>Status: {{ eveniment.status }}</p>
+            <p>Data creării: {{ eveniment.created_at }}</p>
+            <p>Data actualizării: {{ eveniment.updated_at }}</p>
         </div>
+        <hr>
+    {% endfor %}
+
+    <div class="card-header-tabs">
+        <div class="card-header-tabs ">
+            <h2>Adaugă un nou eveniment:</h2>
+            <br><br>
+        </div>
+        <div class="container-fluid">
+            <form method="post" action="{% url 'adauga_eveniment' %}">
+                {% csrf_token %}
+                <input type="hidden" id="user_id" name="user" value="{{ user.id }}">
+                <div class="form-group-lg">
+                    <label for="title">Titlu:</label>
+                    <input type="text" id="title" name="title" class="form-control-lg" required>
+                </div>
+                <div class="container-fluid">
+                    <label for="description">Descriere:</label>
+                    <input id="description" name="description" class="form-control-lg" required>
+                </div>
+                <div class="container-fluid">
+                    <label for="status">Status:</label>
+                    <select id="status" name="status" class="form-control-lg" required>
+                        <option value="1">To Do</option>
+                        <option value="2">In Progress</option>
+                        <option value="3">In Review</option>
+                        <option value="4">Done</option>
+                    </select>
+                </div>
+                <label for="start">Data evenimentului:</label>
+                <input type="date" id="start" name="trip-start"
+                       value="2018-07-22"
+                       min="2018-01-01" max="2024-12-31">
+                <button type="submit" class="btn btn-primary">Adaugă</button>
+            </form>
+        </div>
+    </div>
     </div>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script>
-        flatpickr("#date", {
-            enableTime: false,
-            dateFormat: "Y-m-d"
-        });
-    </script>
+
 {% endblock %}
